# mir-yoke

./: .gitignore  .mcp.json.example  .mir-preserve.toml  AGENTS.md  ARCHITECTURE.md  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  harness_a.toml.example  llms.txt  pyproject.toml  setup.sh  template_protected_paths.yaml
.ai-harness/: bluebricks.md  common-ai-rules.md  deny-list.yaml  development-ai-rules.md  failure-patterns.md  session-closeout.md  tdd-matrix.md
.claude/: settings.json
.codex/: README.md  config.toml  hooks.json
.codex-sync/: manifest.json
.mir/: harness-config.json  specialists.json
config/: bluebrick-paths.json  doc-size-guard.json  external-review-policy.json  external-review-policy.schema.json  harness-consistency.json  harness-consistency.schema.json  parity-classes.json  parity-manifest.json  parity-manifest.schema.json  repo-agent-management.json  repo-agent-management.schema.json  sub-agent-policy.json
docs/: memory-map.md
examples/: README.md
global-rules/: AGENTS.global.md  CLAUDE.global.md  README.md
scripts/: build_session_upfront_context.py  codex-shim.sh  generate_codex_derivatives.sh  intent_store.py  loop_driver.sh  verify_codex_sync.py  verify_self_stop.py  verify_template_applied_state.py
tasks/: change_log.md  checklist.md  intent.json  lessons.md  plan.md  tdd.json
tests/: test_adr53_phase1_schema.py  test_adr53_phase2_population.py  test_adr53_phase3a_search.py  test_adr53_phase3b_context_cli.py  test_autonomous_loop.py  test_closeout_hooks.py  test_intent_store.py  (+9 more)
(+346 files in other folders)
